# up-rs

./: .clog.toml  .editorconfig  .gitignore  .ignore  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WORKSPACE  cliff.toml  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
cargo/: BUILD.bazel  crates.bzl
cargo/remote/: anyhow-1.0.27.BUILD.bazel  arc-swap-0.4.5.BUILD.bazel  arrayref-0.3.6.BUILD.bazel  arrayvec-0.5.1.BUILD.bazel  atty-0.2.14.BUILD.bazel  blake2b_simd-0.5.10.BUILD.bazel  bstr-0.2.12.BUILD.bazel  cc-1.0.50.BUILD.bazel  cc-1.0.52.BUILD.bazel  constant_time_eq-0.1.5.BUILD.bazel  crossbeam-0.7.3.BUILD.bazel  crossbeam-channel-0.4.2.BUILD.bazel  crossbeam-deque-0.7.3.BUILD.bazel  crossbeam-epoch-0.8.2.BUILD.bazel  crossbeam-queue-0.2.1.BUILD.bazel  crossbeam-utils-0.7.2.BUILD.bazel  dirs-2.0.2.BUILD.bazel  dirs-sys-0.3.4.BUILD.bazel  displaydoc-0.1.5.BUILD.bazel  dtoa-0.4.5.BUILD.bazel  envy-0.4.1.BUILD.bazel  getrandom-0.1.14.BUILD.bazel  git2-0.13.0.BUILD.bazel  git2-0.13.5.BUILD.bazel  globset-0.4.5.BUILD.bazel  hermit-abi-0.1.8.BUILD.bazel  idna-0.2.0.BUILD.bazel  ignore-0.4.12.BUILD.bazel  ignore-0.4.14.BUILD.bazel  itoa-0.4.5.BUILD.bazel  jobserver-0.1.21.BUILD.bazel  libc-0.2.68.BUILD.bazel  libc-0.2.69.BUILD.bazel  libgit2-sys-0.12.0+0.99.0.BUILD.bazel  libgit2-sys-0.12.5+1.0.0.BUILD.bazel  libssh2-sys-0.2.16.BUILD.bazel  libssh2-sys-0.2.17.BUILD.bazel  libz-sys-1.0.25.BUILD.bazel  linked-hash-map-0.5.2.BUILD.bazel  log-0.4.8.BUILD.bazel  (+66 more)
docs/: CONTRIBUTING.md  RELEASE.md
meta/: bootstrap-test  build_macos  cargo-docker  release  test  update_deps
src/: args.rs  clone.rs  config.rs  env.rs  errors.rs  exec.rs  files.rs  generate.rs  git.rs  lib.rs  link.rs  main.rs  opts.rs  tasks.rs  update.rs  utils.rs
src/generate/: git.rs
src/opts/: paths.rs  start_time.rs
src/task_lib/: link.rs  mod.rs
src/tasks/: completions.rs  defaults.rs  git.rs  link.rs  mod.rs  schema.rs  task.rs  update_self.rs
src/tasks/defaults/: plist_utils.rs  ser.rs
src/tasks/git/: branch.rs  checkout.rs  cherry.rs  clone.rs  errors.rs  fetch.rs  merge.rs  prune.rs  status.rs  update.rs
src/update/: task.rs  update_self.rs
src/utils/: errors.rs  files.rs  log.rs  mac.rs  user.rs
tests/: common.rs  config.rs  defaults.rs  generate.rs  git.rs  help.rs  link.rs  list.rs  run.rs  test_config.rs  test_help.rs  test_link.rs  test_style.rs  test_update.rs  test_zstyle.rs  tests.rs  up_all.rs  z_style.rs
tests/common/: mod.rs
tests/fixtures/basic_config/: dot.toml
tests/fixtures/basic_config/tasks/foo/: update.sh
tests/fixtures/bootstrap-test/git/: config  git  git-credential-netrc
tests/fixtures/config/basic_yaml/tasks/foo/: check
tests/fixtures/fake_home_dir_with_upconfig/: README.md
tests/fixtures/fake_home_dir_without_upconfig/: README.md
tests/fixtures/generate/generate_passing/expected_tasks/: git_1.yaml  git_2.yaml
tests/fixtures/generate/generate_passing/git_scan_dir_1/some_dir/bad_git_subdir_is_file/: bad_dir_file
tests/fixtures/generate/generate_passing/git_scan_dir_1/some_dir/good_dir/: good_dir_file
tests/fixtures/generate/generate_passing/git_scan_dir_3/good_dir_2/: good_dir_2_file
tests/fixtures/generate/generate_passing/up_config_dir/: up.yaml
tests/fixtures/generate/generate_passing/up_config_dir/generate_tasks/: generate_git_1.yaml
tests/fixtures/generate/generate_passing/up_config_dir/tasks/: git_2.yaml
tests/fixtures/generate/test_generate_passing/expected_tasks/: git_2.yaml
tests/fixtures/generate/test_generate_passing/git_scan_dir_2/maybe_matches_exclude/: bad_dir_3_file
tests/fixtures/generate/test_generate_passing/git_scan_dir_3/good_dir_3/: good_dir_3_file
tests/fixtures/generate/test_generate_passing/up_config_dir/generate_tasks/: generate_git_1.yaml  generate_git_2.yaml
tests/fixtures/link/backup_files/home_dir/: existing_symlink
tests/fixtures/link/hidden_and_nested/dotfile_dir/link_to_dir/: file3
tests/fixtures/link/hidden_and_nested/home_dir/: file_to_dir
tests/fixtures/link/test_backup_files/dotfile_dir/: existing_symlink
tests/fixtures/link/test_backup_files/home_dir/: already_in_backup
tests/fixtures/link/test_backup_files/home_dir/subdir/: existing_subdir_file
tests/fixtures/link/test_hidden_and_nested/dotfile_dir/file_to_dir/: file2
tests/fixtures/link/test_hidden_and_nested/home_dir/.config/: .file
tests/fixtures/link/test_new_link/home_dir/: existing_file
tests/fixtures/link/todo/home_dir/: file
tests/fixtures/link/todo/home_dir/backup/: file
tests/fixtures/link/todo/home_dir/should_be_file/: should_be_file_contents
tests/fixtures/list/test_up_list_passing/up_config_dir/: up.yaml
tests/fixtures/list/up_list_passing/up_config_dir/tasks/: link.yaml  run_self_cmd.toml  run_self_cmd.yaml  skip_self_cmd.yaml
tests/fixtures/run/test_up_run_passing/up_config_dir/tasks/: run_self_cmd.yaml  skip_self_cmd.yaml
tests/fixtures/run/up_run_passing/up_config_dir/: up.toml
tests/fixtures/run/up_run_passing/up_config_dir/tasks/: defaults.yaml  skip_self_cmd.toml  skip_self_cmd.yaml
tests/fixtures/test_link/backup_files/dot_dir/: already_in_backup
tests/fixtures/test_link/backup_files/home_dir/subdir/: new_subdir_file
tests/fixtures/test_link/hidden_and_nested/dot_dir/: bad_link  dir_to_file  existing_link
tests/fixtures/test_link/hidden_and_nested/dot_dir/badlink_to_dir/: file4
tests/fixtures/test_link/hidden_and_nested/home_dir/: bad_link
tests/fixtures/test_link/hidden_and_nested/home_dir/dir_to_file/: file
tests/fixtures/test_link/todo/dot_dir/: should_be_file
tests/fixtures/test_link/todo/home_dir/: good_link
tests/fixtures/test_link/todo/home_dir/backup/: other_file
tests/fixtures/test_update/: dot.toml
tests/fixtures/up_all/up_passing/up_config_dir/: up.toml
tests/fixtures/up_all/up_passing/up_config_dir/tasks/: link.toml
tests/fixtures/update/: up.yaml
tests/testutils/: Cargo.toml  README.md
tests/testutils/src/: assert.rs  ensure_utils.rs  lib.rs
testutils/: Cargo.toml
testutils/src/: assert.rs  lib.rs
(+6 files in other folders)
