# Make this a workspace so that path dependencies below share the same lockfile.
[workspace]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/gibfahn/up-rs"
keywords = ["cli", "tool"]
categories = ["command-line-utilities", "config"]
readme = "README.md"
authors = ["Gibson Fahnestock <gibfahn@gmail.com>"]

[workspace.lints.rust]
unsafe_code = "forbid"

# up-rs is the root package in this workspace.
[package]
name = "up-rs"
version = "0.15.1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

description = """
up-rs is a tool to help you keep your machine up to date.
"""
documentation = "https://github.com/gibfahn/up-rs"
homepage = "https://github.com/gibfahn/up-rs"
exclude = ["tests/"]

[[bin]]
name = "up"
path = "src/main.rs"

[dependencies]
camino = { version = "1.1.6", features = ["serde1"] }
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive", "env", "string", "wrap_help"] }
clap_complete = "4.4.4"
color-eyre = "0.6.2"
dirs = "5.0.1"
displaydoc = "0.2.4"
duct = "0.13.7"
envy = "0.4.2"
git2 = { version = "0.18.1", features = ["vendored-openssl", "vendored-libgit2"] }
hex = "0.4.3"
itertools = "0.12.0"
log = "0.4.20"
plist = "1.6.0"
rayon = "1.8.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
ring = "0.17.7"
semver = "1.0.20"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.29"
shell-escape = "0.1.5"
shellexpand = "3.1.0"
thiserror = "1.0.52"
toml = "0.8.8"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
url = "2.5.0"
users = "0.11.0"
walkdir = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
ignore = "0.4.21"
predicates = "3.0.4"
serial_test = "2.0.0"
testutils = { path = "./tests/testutils" }
test-log = {version = "0.2.14", default-features = false, features = ["trace"]}
pretty_assertions = "1.4.0"
pretty_assertions_sorted = "1.2.3"
glob = "0.3.1"
