# Make this a workspace so that path dependencies below share the same lockfile.
[workspace]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/gibfahn/up-rs"
keywords = ["cli", "tool"]
categories = ["command-line-utilities", "config"]
readme = "README.md"
authors = ["Gibson Fahnestock <gibfahn@gmail.com>"]

[workspace.lints.rust]
unsafe_code = "forbid"

# up-rs is the root package in this workspace.
[package]
name = "up-rs"
version = "0.15.1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

description = """
up-rs is a tool to help you keep your machine up to date.
"""
documentation = "https://github.com/gibfahn/up-rs"
homepage = "https://github.com/gibfahn/up-rs"
exclude = ["tests/"]

[[bin]]
name = "up"
path = "src/main.rs"

[dependencies]
camino = { version = "1.1.6", features = ["serde1"] }
chrono = "0.4.38"
clap = { version = "4.5.4", features = [
  "derive",
  "env",
  "string",
  "wrap_help",
] }
clap_complete = "4.5.2"
color-eyre = "0.6.3"
dirs = "5.0.1"
displaydoc = "0.2.4"
duct = "0.13.7"
envy = "0.4.2"
git2 = { version = "0.18.3", features = [
  "vendored-openssl",
  "vendored-libgit2",
] }
hex = "0.4.3"
itertools = "0.12.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
log = "0.4.21"
plist = "1.6.1"
rayon = "1.10.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
ring = "0.17.8"
semver = "1.0.22"
serde = "1.0.198"
serde_derive = "1.0.198"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
shell-escape = "0.1.5"
shellexpand = "3.1.0"
thiserror = "1.0.58"
toml = "0.8.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
users = "0.11.0"
walkdir = "2.5.0"
tracing-indicatif = "0.3.6"

[dev-dependencies]
assert_cmd = "2.0.14"
ignore = "0.4.22"
predicates = "3.1.0"
serial_test = "3.0.0"
testutils = { path = "./tests/testutils" }
test-log = { version = "0.2.15", default-features = false, features = [
  "trace",
] }
pretty_assertions = "1.4.0"
pretty_assertions_sorted = "1.2.3"
glob = "0.3.1"
