[package]
name = "testutils"
version = "0.1.0"
authors = ["Gibson Fahnestock <gibfahn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
walkdir = "2.3.1"

# cargo-raze config: https://github.com/google/cargo-raze
[raze]
# Don't vendor deps.
genmode = "Remote"
# The WORKSPACE relative path to the Cargo.toml working directory.
workspace_path = "//testutils"
