[package]
name = "testutils"
version = "0.1.0"
authors = ["Gibson Fahnestock <gibfahn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.10"
camino = { version = "1.1.4", features = ["serde1"] }
color-eyre = "0.6.2"
predicates = "3.0.2"
walkdir = "2.3.3"
