[package]
name = "testutils"
version = "0.1.0"
authors = ["Gibson Fahnestock <gibfahn@gmail.com>"]
publish = false
edition.workspace = true
repository.workspace = true
description = "Collection of functions used in multiple integration tests."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.13"
camino = { version = "1.1.6", features = ["serde1"] }
color-eyre = "0.6.2"
miette = { version = "7.2.0", features = ["fancy"] }
predicates = "3.1.0"
walkdir = "2.4.0"

[lints]
workspace = true
